--- a/iCoinTicker/MainMenu.xib
+++ b/iCoinTicker/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G12b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G18a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -84,75 +84,12 @@ ETH : 0x3A06b2C45AC207eb66Bc79B4C81522a120E629CC</string>
         <customObject id="5v1-Rt-say" userLabel="Delegate" customClass="AppDelegate" customModule="iCoinTicker" customModuleProvider="target">
             <connections>
                 <outlet property="appname" destination="QeD-hA-b3x" id="vuP-fx-4oG"/>
-                <outlet property="coinMenu" destination="ajs-qB-E6B" id="oCX-Of-4mU"/>
-                <outlet property="currencyMenu" destination="4GM-GR-2Tv" id="eb7-13-PZR"/>
-                <outlet property="fontSizeMenu" destination="upR-Nx-kyt" id="soz-ZX-28j"/>
-                <outlet property="marketMenu" destination="uMQ-1S-PLZ" id="RHp-YV-Nha"/>
-                <outlet property="refresh" destination="kqm-By-QWK" id="6GF-G9-AaL"/>
-                <outlet property="refreshTimeMenu" destination="C4s-PQ-Y1N" id="aEh-dj-hs4"/>
                 <outlet property="statusMenu" destination="RYg-KH-kzd" id="S5L-fw-tIK"/>
-                <outlet property="symbolMenu" destination="ZeF-lU-tUr" id="GnV-iG-D9S"/>
                 <outlet property="window" destination="aM5-Nr-TIk" id="3jS-jZ-R1s"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="RYg-KH-kzd" userLabel="Status Menu">
-            <items>
-                <menuItem title="About / Donate" alternate="YES" id="YNh-RM-Knq">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="info:" target="5v1-Rt-say" id="1JH-Gg-5ok"/>
-                    </connections>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" id="MXm-ir-VFK"/>
-                <menuItem isSeparatorItem="YES" id="dbC-Cb-93b"/>
-                <menuItem title="Refresh" id="kqm-By-QWK">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="refresh:" target="5v1-Rt-say" id="vgn-QJ-qh9"/>
-                    </connections>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" id="VMg-9q-iD5"/>
-                <menuItem title="Options" id="dak-8K-KxN">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Options" id="vI8-lk-Od4">
-                        <items>
-                            <menuItem title="Currency" id="TAb-ZJ-n4j">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Currency" id="4GM-GR-2Tv"/>
-                            </menuItem>
-                            <menuItem title="Show currency symbol" id="lu5-J9-C6J">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Show currency symbol" id="ZeF-lU-tUr"/>
-                            </menuItem>
-                            <menuItem title="Font Size" id="VS7-Sb-lCR" userLabel="Font Size">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Font Size" id="upR-Nx-kyt"/>
-                            </menuItem>
-                            <menuItem title="Refresh Time" id="TE2-rX-nzv">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Refresh Time" id="C4s-PQ-Y1N"/>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="57P-bg-iAh"/>
-                            <menuItem title="Enabled Coins" id="0qg-VS-Ig1">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Enabled Coins" id="ajs-qB-E6B"/>
-                            </menuItem>
-                            <menuItem title="Enabled Markets" id="I1E-st-ss2" userLabel="Enabled Markets">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Enabled Markets" id="uMQ-1S-PLZ"/>
-                            </menuItem>
-                        </items>
-                    </menu>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" id="0IH-ai-g0X"/>
-                <menuItem title="Quit" id="qsu-Kq-aq1">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="quit:" target="5v1-Rt-say" id="DIS-Pz-MH3"/>
-                    </connections>
-                </menuItem>
-            </items>
             <point key="canvasLocation" x="-162" y="-4"/>
         </menu>
     </objects>
