--- a/iCoinTicker/MainMenu.xib
+++ b/iCoinTicker/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G12b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G18a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -98,7 +98,7 @@ ETH : 0x3A06b2C45AC207eb66Bc79B4C81522a120E629CC</string>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="RYg-KH-kzd" userLabel="Status Menu">
             <items>
-                <menuItem title="About / Donate" alternate="YES" id="YNh-RM-Knq">
+                <menuItem title="About iCoinTicker" alternate="YES" id="YNh-RM-Knq">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="info:" target="5v1-Rt-say" id="1JH-Gg-5ok"/>
